# cot

./: .cargo-crap.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GITHUB_ACTIONS_ANALYSIS.md  README.md  clippy.toml  compose.yml  deny.toml  djlint.toml  docs-site.dockerfile  justfile  prek.toml  todo.txt
.cargo/: config.toml  deny.toml  release-plz.toml
.config/: cliff.toml  djlint.toml  nextest.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  base-benchmarks.yml  bencher-base-benchmarks.yml  bencher-closed-pr.yml  bencher-pr-benchmarks.yml  docker.yml  release-plz-pr.yml  release-plz-release.yml  release-plz.yml  rust.yml
cot/: CHANGELOG.md  Cargo.toml  build.rs
cot-cli/: CHANGELOG.md  Cargo.toml
cot-cli/src/: args.rs  handlers.rs  lib.rs  main.rs  migration_generator.rs  new_project.rs  project.rs  test_utils.rs  utils.rs
cot-cli/src/project_template/: .gitignore  Cargo.lock.template  Cargo.toml.template
cot-cli/tests/: cli.rs  manpages.rs  migration_generator.rs  new_project.rs
cot-cli/tests/migration_generator/: foreign_key_path_mismatch.rs  keywords.rs  keywords_model.rs
cot-cli/tests/snapshot_testing/: mod.rs
cot-codegen/: CHANGELOG.md  Cargo.toml
cot-codegen/src/: model.rs  symbol_resolver.rs
cot-core/: Cargo.toml
cot-core/src/: body.rs  error.rs  handler.rs  headers.rs  html.rs  lib.rs  middleware.rs  openapi.rs  request.rs  response.rs  router.rs
cot-core/src/error/: backtrace.rs  error_impl.rs  handler.rs  method_not_allowed.rs  not_found.rs  uncaught_panic.rs
cot-core/src/openapi/: method.rs
cot-core/src/request/: extractors.rs  path_params_deserializer.rs
cot-core/src/response/: into_response.rs
cot-core/src/router/: method.rs  path.rs
cot-core/src/router/method/: openapi.rs
cot-macros/: CHANGELOG.md  Cargo.toml
cot-macros/src/: admin.rs  cache.rs  dbtest.rs  form.rs  from_request.rs  lib.rs  main_fn.rs  migration_op.rs  model.rs  query.rs
cot-macros/tests/: compile_tests.rs  query.rs
cot-macros/tests/ui/: attr_main_args.rs  attr_main_args.stderr  attr_model_generic.stderr  derive_from_request_parts.rs  derive_into_response_missing_trait_impl.stderr  derive_select_choice_enum_with_data.stderr  func_query_double_op.stderr  func_query_field_ref_method_wrong_arity.rs  func_query_field_ref_method_wrong_arity.stderr  func_query_field_ref_non_existing_method.rs  func_query_field_ref_non_existing_method.stderr  func_query_invalid_field.stderr  func_query_starting_op.stderr
cot-test/: Cargo.toml
cot-test/src/: config_reference.rs  lib.rs
cot-test/templates/: base.html  html_main.rs
cot-test/tests/: config_reference.rs  doc_code_blocks.rs  mytest.rs
cot/benches/: bench_utils.rs  router.rs
cot/src/: admin.rs  auth.rs  body.rs  cache.rs  cli.rs  common_types.rs  config.rs  db.rs  email.rs  error.rs  error_page.rs  form.rs  forms.rs  handler.rs  headers.rs  hot_patching.rs  html.rs  humantime.rs  json.rs  lib.rs  metadata.rs  middleware.rs  openapi.rs  private.rs  project.rs  request.rs  response.rs  router.rs  serializers.rs  session.rs  static_files.rs  test.rs  utils.rs
cot/src/auth/: db.rs
cot/src/auth/db/: migrations.rs
cot/src/cache/: store.rs  stores.rs
cot/src/db/: fields.rs  impl_mysql.rs  impl_postgres.rs  impl_sqlite.rs  migrations.rs  query.rs  relations.rs  sea_query_db.rs
cot/src/email/: transport.rs
cot/src/error/: error_impl.rs  handler.rs  method_not_allowed.rs  not_found.rs  uncaught_panic.rs  url.rs
cot/src/form/: field_value.rs  fields.rs  types.rs
cot/src/forms/: fields.rs
cot/src/middleware/: live_reload.rs
cot/src/openapi/: method.rs  swagger_ui.rs
cot/src/request/: extractors.rs
cot/src/response/: into_response.rs  into_response_parts.rs
cot/src/router/: method.rs  path.rs  path_params_deserializer.rs
cot/src/session/: db.rs  store.rs
cot/src/utils/: chrono.rs  cli.rs  graph.rs
cot/static/admin/: admin.css
cot/templates/: 404.html  error.html  fail.html
cot/templates/admin/: base.html  login.html  model.html  model_edit.html  model_list.html  model_remove.html
cot/tests/: admin.rs  auth.rs  cli.rs  db.rs  form.rs  from_request.rs  middleware.rs  openapi.rs  project.rs  router.rs  session_store.rs
cot/tests/ui/: unimplemented_request_handler.stderr
crates/cot/src/: auth.rs  lib.rs  static_files.rs
docs/: .dockerignore  Dockerfile  README.md  admin-panel.md  authentication.md  caching.md  configuration.md  db-models.md  error-pages.md  forms.md  introduction.md  middleware.md  openapi.md  routing.md  sessions.md  static-files.md  templates.md  testing.md  upgrade-guide.md
docs-site/: Cargo.toml  README.md  bacon.toml  compose.dev.yml
docs-site/src/: main.rs
docs/databases/: overview.md  queries.md
docs/site/: Cargo.toml  README.md  bacon.toml  compose.dev.yml
docs/site/src/: main.rs
examples/admin/: Cargo.toml
examples/admin/src/: main.rs
examples/admin/templates/: index.html
examples/custom-error-pages/: Cargo.toml
examples/custom-error-pages/src/: 500.html  main.rs
examples/custom-error-pages/templates/: error.html
examples/custom-task/: Cargo.toml
examples/file-upload/: Cargo.toml
examples/file-upload/src/: main.rs
examples/file-upload/templates/: uploaded.html
examples/forms/: Cargo.toml
examples/forms/config/: dev.toml
examples/forms/src/: main.rs
examples/forms/templates/: index.html
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/json/: Cargo.toml
examples/json/src/: main.rs
examples/send-email/: Cargo.toml
examples/send-email/config/: dev.toml
examples/send-email/src/: main.rs
examples/send-email/templates/: index.html  sent.html
examples/sessions/: Cargo.toml
examples/sessions/src/: main.rs
examples/todo-list/: Cargo.toml
examples/todo-list/src/: main.rs
examples/todoapp/: Cargo.toml
examples/todoapp/config/: dev.toml
examples/todoapp/src/: main.rs  migrations.rs
(+84 files in other folders)
