[package]
name = "cot_core"
version = "0.6.1"
description = "The Rust web framework for lazy developers - framework core."
categories = ["web-programming", "web-programming::http-server", "network-programming"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
askama = { workspace = true, features = ["alloc"] }
axum.workspace = true
backtrace.workspace = true
bytes.workspace = true
cot_macros.workspace = true
derive_more = { workspace = true, features = ["debug", "deref", "display", "from"] }
form_urlencoded.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
http-body.workspace = true
http.workspace = true
indexmap.workspace = true
schemars = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_html_form = { workspace = true, features = ["de", "std"] }
serde_json.workspace = true
serde_path_to_error.workspace = true
sync_wrapper.workspace = true
thiserror.workspace = true
tower-sessions.workspace = true
tower.workspace = true

[dev-dependencies]
async-stream.workspace = true
# Specifying path directly to avoid circular dependencies on publishing cot and cot-core.
# When publishing, path dependencies are dropped, removing the cycle.
cot = { path = "../cot", features = ["test"] }
futures.workspace = true
tokio.workspace = true

[features]
default = []
json = []
schemars = ["dep:schemars"]
