[package]
name = "cot-test"
description = "Internal crate containing various integrations tests and test utilities."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
authors.workspace = true

[dev-dependencies]
comrak.workspace = true
cot.workspace = true
cot-cli.workspace = true
libtest-mimic.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[test]]
name = "mytest"
path = "tests/mytest.rs"
harness = false
