[package]
name = "docs-site"
description = "Cot web framework website and official guide"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cot = { version = "0.6", default-features = false }
cot-site = { git = "https://github.com/cot-rs/cot-site.git", rev = "a0949dfd2cf173f332d173f37d77620d96aabe68" }
