[package]
name = "docs-site"
description = "Cot web framework website and official guide"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cot = { version = "0.6", default-features = false }
cot-site = { git = "https://github.com/cot-rs/cot-site.git", rev = "7ffda58f9920b4f16e19be9326db527a152b91f6" }
