[package]
name = "docs-site"
description = "Cot web framework website and official guide"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cot = { version = "0.7", default-features = false }
cot-site = { git = "https://github.com/cot-rs/cot-site.git", rev = "07ef835b426c9d0ce58f68113b2a7c263bd54b8d" }
