[package]
name = "example-json"
version = "0.1.0"
publish = false
description = "JSON - Cot example."
edition = "2024"

[dependencies]
cot = { path = "../../cot", features = ["openapi"] }
serde = "1"
aide = { version = "0.14", features = ["swagger"] }
schemars = "0.8"
indexmap = "2"
utoipa-swagger-ui.workspace = true
