[package]
name = "example-json"
version = "0.1.0"
publish = false
description = "JSON - Cot example."
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
cot = { path = "../../cot", features = ["openapi", "swagger-ui"] }
cot_core = { path = "../../cot-core" }
serde = "1"
schemars = "0.9"
