[package]
name = "send-email"
version = "0.1.0"
publish = false
description = "Send email - Cot example."
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cot = { path = "../../cot", features = ["email", "live-reload"] }
askama = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
